--- a/tests/common/static/layout.less
+++ b/tests/common/static/layout.less
@@ -6,6 +6,12 @@ html, body {
   .main {
     margin: 10px 0px;
     min-height: 200px;
+    box-shadow: #0b97c4;
+    opacity: .2;
+    box-sizing: border-box;
   }
   margin: 20px;
+}
+input[type=checkbox]:checked{
+  background: #fff;
 }
